[package]
name = "coin"
version = "0.1.0"
edition = "2021"
authors = ["Ken Ha <khanhhaquang@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to check coin price"
readme = "README.md"
homepage = "https://github.com/khanhhaquang/coin-check-cli"
repository = "https://github.com/khanhhaquang/coin-check-cli"
keywords = ["cli", "coin", "crypto", "price"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"